# lis_lab9

./: CMakeLists.txt
inc/: check.h  gui.h  main.h  util.h
src/: check.c  gui.c  main.c  util.c
